name:                byron-proxy
version:             0.1.0.0
synopsis:            Adapter for the Byron net
-- description:
homepage:            https://github.com/input-output-hk/ouroboros-network
license:             BSD3
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          alex@well-typed.com
-- copyright:
category:            Ouroboros
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Ouroboros.Byron.Proxy.DB,
                       Ouroboros.Byron.Proxy.Pool,
                       Ouroboros.Byron.Proxy.Main,

                       Ouroboros.Byron.Proxy.Index.Sqlite,
                       Ouroboros.Byron.Proxy.Index.Types,

                       Ouroboros.Byron.Proxy.ChainSync.Client,
                       Ouroboros.Byron.Proxy.ChainSync.Server,
                       Ouroboros.Byron.Proxy.ChainSync.Types,

                       Ouroboros.Byron.Proxy.Network.Protocol
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       async,
                       bytestring,
                       cardano-binary,
                       cardano-crypto-wrapper,
                       cardano-ledger,
                       cardano-sl,
                       cardano-sl-binary,
                       cardano-sl-chain,
                       cardano-sl-core,
                       cardano-sl-crypto,
                       cardano-sl-db,
                       cardano-sl-infra,
                       cborg,
                       conduit,
                       containers,
                       contra-tracer,
                       cryptonite,
                       directory,
                       io-sim-classes,
                       iohk-monitoring,
                       lens,
                       memory,
                       ouroboros-consensus,
                       ouroboros-network,
                       resourcet,
                       sqlite-simple,
                       serialise,
                       stm,
                       tagged,
                       text,
                       transformers,
                       typed-protocols,
                       unliftio-core
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-unused-imports

executable byron-proxy
  main-is:             Main.hs
  other-modules:       DB,
                       Logging
  -- other-extensions:
  build-depends:       base,
                       async,
                       byron-proxy,
                       bytestring,
                       cardano-binary,
                       cardano-ledger,
                       cardano-sl,
                       cardano-sl-binary,
                       cardano-sl-chain,
                       cardano-sl-infra,
                       cardano-sl-util,
                       cborg,
                       containers,
                       contra-tracer,
                       directory,
                       exceptions,
                       iohk-monitoring,
                       io-sim-classes,
                       lens,
                       network,
                       optparse-applicative,
                       ouroboros-consensus,
                       ouroboros-network,
                       random,
                       resourcet,
                       stm,
                       text,
                       time,
                       transformers,
                       typed-protocols
  hs-source-dirs:      src/exec
  default-language:    Haskell2010
  -- -threaded is needed or else the diffusion layer will crash, due to a use
  -- of registerDelay
  ghc-options:         -threaded
                       -fwarn-incomplete-patterns
                       -fwarn-unused-imports

executable validator
  main-is:             Validator.hs
  other-modules:       Logging
  -- other-extensions:
  build-depends:       base,
                       byron-proxy,
                       cardano-binary,
                       cardano-crypto-wrapper,
                       cardano-ledger,
                       cardano-shell,
                       contra-tracer,
                       exceptions,
                       io-sim-classes,
                       iohk-monitoring,
                       network,
                       optparse-applicative,
                       ouroboros-network,
                       resourcet,
                       text,
                       time,
                       transformers,
                       typed-protocols
  hs-source-dirs:      src/exec
  default-language:    Haskell2010
  -- -threaded is needed or else the diffusion layer will crash, due to a use
  -- of registerDelay
  ghc-options:         -threaded
                       -fwarn-incomplete-patterns
                       -fwarn-unused-imports
