cabal-version:       3.0
name:                cabal-lint
version:             0.0.0.1
synopsis:            IOG Consensus team's invariant checker for .cabal files
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2022 Input Output (Hong Kong) Ltd.
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
category:            Network
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network

library
  hs-source-dirs:      src

  exposed-modules:
                       Cabal.Lint
                       Cabal.Lint.Ids
                       Cabal.Lint.Main
                       Cabal.Lint.Ord
                       Cabal.Lint.Summygroup
                       Cabal.Lint.UX.Output

  default-language:    Haskell2010

  build-depends:       base              >=4.9 && <4.17

                     , async
                     , bytestring
                     , Cabal-syntax
                     , containers

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists

executable cabal-lint
  hs-source-dirs:      exe-src
  main-is:             Main.hs
  build-depends:       cabal-lint
  default-language:    Haskell2010

  ghc-options:         -threaded -rtsopts

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
