cabal-version: 3.0
name: cardano-client
version: 0.5
synopsis: An API for ouroboros-network
description: An API for ouroboros-network.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright: 2019-2023 Input Output Global Inc (IOG), 2023-2025 Intersect
author: IOHK Engineering Team
maintainer: marcin.szamotulski@iohk.io
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules: Cardano.Client.Subscription
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  build-depends:
    base >=4.14 && <4.21,
    bytestring >=0.10 && <0.13,
    cborg,
    containers,
    contra-tracer,
    network-mux >=0.6 && <0.8,
    ouroboros-network >=0.19 && <0.21,
    ouroboros-network-api >=0.12 && <0.14,
    ouroboros-network-framework >=0.15 && <0.18,
    si-timers,

  ghc-options:
    -Wall
    -Wno-unticked-promoted-constructors
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wunused-packages
