cabal-version: 3.0
name: cardano-ping
version: 0.8.0.0
synopsis: Utility for pinging cardano nodes
description: Utility for pinging cardano nodes.
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

copyright: 2019-2024 Input Output Global Inc (IOG), 2023-2025 Intersect
author: Karl Knutsson
maintainer: karl.knutsson-ext@cardanofoundation.org marcin.szamotulski@iohk.io
category: Network
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

flag asserts
  description: Enable assertions
  manual: False
  default: False

library
  hs-source-dirs: src
  exposed-modules: Cardano.Network.Ping
  build-depends:
    aeson >=2.1.1.0 && <3,
    base >=4.14 && <4.21,
    bytestring >=0.10 && <0.13,
    cborg >=0.2.8 && <0.3,
    contra-tracer >=0.1 && <0.3,
    iproute ^>=1.7.15,
    network ^>=3.2.7,
    network-mux ^>=0.7,
    si-timers ^>=1.5,
    strict-stm,
    tdigest ^>=0.3,
    text >=1.2.4 && <2.2,
    time,
    transformers >=0.5 && <0.7,

  if flag(asserts)
    ghc-options: -fno-ignore-asserts
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
