cabal-version: 3.4
name: decentralized-message-queue
version: 0.1.0.0
synopsis: Decentralized Message Queue Node
description:
  Decentralized Message Queue Node based on Cardano Diffusion
  network layer. Allows one to create their own overlay network and
  run their own mini-protocols.

homepage:
  https://github.com/IntersectMBO/ouroboros-network/decentralized-message-queue

license: Apache-2.0
license-file: LICENSE
author: Armando Santos
maintainer: armando.santos@iohk.io
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -Wno-unticked-promoted-constructors
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wunused-packages

library
  import: warnings
  exposed-modules:
    DMQ.Configuration
    DMQ.Configuration.CLIOptions
    DMQ.Configuration.Topology
    DMQ.Diffusion.Applications
    DMQ.Diffusion.Arguments
    DMQ.Diffusion.NodeKernel
    DMQ.Diffusion.PeerSelection
    DMQ.NodeToClient
    DMQ.NodeToNode
    DMQ.Protocol.SigSubmission.Type
    DMQ.Protocol.SigSubmission.Codec

  build-depends:
    aeson >=2.1.1.0 && <3,
    base >=4.14 && <4.22,
    bytestring >=0.10 && <0.13,
    cborg >=0.2.1 && <0.3,
    containers >=0.5 && <0.8,
    contra-tracer >=0.1 && <0.3,
    deepseq >=1.0 && <1.6,
    dns >=1.0 && <4.3,
    hashable >=1.0 && <1.6,
    io-classes:{io-classes, si-timers} ^>=1.8.0.1,
    iproute ^>=1.7.15,
    network ^>=3.2.7,
    network-mux ^>=0.9,
    nothunks ^>=0.1.4 || ^>=0.2,
    optparse-applicative ^>=0.18,
    ouroboros-network:{ouroboros-network, cardano-diffusion, orphan-instances} ^>=0.22,
    ouroboros-network-api ^>=0.16,
    ouroboros-network-framework ^>=0.19,
    ouroboros-network-protocols ^>=0.15,
    random ^>=1.2,
    text >=1.2.4 && <2.2,
    typed-protocols:{cborg, typed-protocols} ^>=1.1,

  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost

executable dmq-exe
  import: warnings
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    base,
    contra-tracer >=0.1 && <0.3,
    decentralized-message-queue,
    optparse-applicative,
    ouroboros-network,
    ouroboros-network-api,
    random,

  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost

test-suite dmq-test
  import: warnings
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  other-modules:
    Test.DMQ.NodeToClient
    Test.DMQ.NodeToNode

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    base >=4.14 && <4.22,
    decentralized-message-queue,
    ouroboros-network-api,
    tasty,
    tasty-quickcheck,
    with-utf8,

  ghc-options:
    -fno-ignore-asserts
    -threaded
    -rtsopts
    +RTS
    -T
    -RTS
