cabal-version: 3.4
name: decentralized-message-queue
version: 0.1.0.0
synopsis: Decentralized Message Queue Node
description:
  Decentralized Message Queue Node based on Cardano Diffusion
  network layer. Allows one to create their own overlay network and
  run their own mini-protocols.

homepage:
  https://github.com/IntersectMBO/ouroboros-network/decentralized-message-queue

license: Apache-2.0
license-file: LICENSE
author: Armando Santos
maintainer: armando.santos@iohk.io
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-extensions:
    BangPatterns
    BlockArguments
    GADTs
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

common warnings
  ghc-options:
    -Wall
    -Wno-unticked-promoted-constructors
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wunused-packages

library
  import:
    warnings,
    extensions

  exposed-modules:
    DMQ.Configuration
    DMQ.Configuration.CLIOptions
    DMQ.Configuration.Topology
    DMQ.Diffusion.Applications
    DMQ.Diffusion.Arguments
    DMQ.Diffusion.NodeKernel
    DMQ.Diffusion.PeerSelection
    DMQ.NodeToClient
    DMQ.NodeToClient.LocalMsgNotification
    DMQ.NodeToClient.LocalMsgSubmission
    DMQ.NodeToClient.Version
    DMQ.NodeToNode
    DMQ.NodeToNode.Version
    DMQ.Protocol.LocalMsgNotification.Client
    DMQ.Protocol.LocalMsgNotification.Codec
    DMQ.Protocol.LocalMsgNotification.Examples
    DMQ.Protocol.LocalMsgNotification.Server
    DMQ.Protocol.LocalMsgNotification.Type
    DMQ.Protocol.LocalMsgSubmission.Client
    DMQ.Protocol.LocalMsgSubmission.Codec
    DMQ.Protocol.LocalMsgSubmission.Server
    DMQ.Protocol.LocalMsgSubmission.Type
    DMQ.Protocol.SigSubmission.Codec
    DMQ.Protocol.SigSubmission.Type
    DMQ.Tracer

  build-depends:
    acts,
    acts-generic,
    aeson >=2.1.1.0 && <3,
    aeson-pretty,
    base >=4.14 && <4.22,
    bytestring >=0.10 && <0.13,
    cborg >=0.2.1 && <0.3,
    containers >=0.5 && <0.8,
    contra-tracer >=0.1 && <0.3,
    deepseq >=1.0 && <1.6,
    directory,
    dns >=1.0 && <4.3,
    filepath,
    generic-data,
    hashable >=1.0 && <1.6,
    io-classes:{io-classes, si-timers, strict-mvar, strict-stm} ^>=1.8.0.1,
    iproute ^>=1.7.15,
    network ^>=3.2.7,
    network-mux ^>=0.9,
    optparse-applicative ^>=0.18,
    ouroboros-network:{ouroboros-network, orphan-instances} ^>=0.22,
    ouroboros-network-api ^>=0.16,
    ouroboros-network-framework ^>=0.19,
    ouroboros-network-protocols ^>=0.15,
    random ^>=1.2,
    singletons,
    text >=1.2.4 && <2.2,
    time ^>=1.12,
    typed-protocols:{typed-protocols, cborg} ^>=1.1,

  hs-source-dirs: src
  default-language: Haskell2010

executable dmq-node
  import:
    warnings,
    extensions

  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    acts,
    aeson,
    base,
    contra-tracer >=0.1 && <0.3,
    decentralized-message-queue,
    optparse-applicative,
    ouroboros-network,
    ouroboros-network-api,
    random,

  hs-source-dirs: app
  default-language: Haskell2010

test-suite dmq-test
  import:
    warnings,
    extensions

  default-language: Haskell2010
  other-modules:
    Test.DMQ.NodeToClient
    Test.DMQ.NodeToNode
    Test.DMQ.Protocol.LocalMsgNotification
    Test.DMQ.Protocol.LocalMsgSubmission
    Test.DMQ.Protocol.SigSubmission

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    base >=4.14 && <4.22,
    bytestring,
    cborg,
    contra-tracer,
    decentralized-message-queue,
    io-classes,
    io-sim,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols:testlib,
    ouroboros-network-testing,
    quickcheck-instances,
    serialise,
    tasty,
    tasty-quickcheck,
    time,
    typed-protocols:{typed-protocols, codec-properties},
    with-utf8,

  ghc-options:
    -fno-ignore-asserts
    -threaded
    -rtsopts
    +RTS
    -T
    -RTS
